Update stylesheet to add padding on the right of the holder div. This fixes a bug where the catalog table was getting cropped on the right side.

--- a/server/ncm/stylesheets/styles.css
+++ b/server/ncm/stylesheets/styles.css
@@ -23,6 +23,7 @@ img {
 #holder {
 	margin:auto;
 	width:1080px;
+	padding-right: 15px;
 	background:white;
 	border-radius:15px;
 	-moz-border-radius:15px;
